--- a/AnimeFinder/View/Base.lproj/Main.storyboard
+++ b/AnimeFinder/View/Base.lproj/Main.storyboard
@@ -23,11 +23,6 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="d61-kU-vdY" kind="popoverPresentation" popoverAnchorView="fWj-Ty-2xV" id="a89-Pt-wJy">
-                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
-                                    </segue>
-                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -53,21 +48,126 @@
         <!--Main View-->
         <scene sceneID="cRW-0j-i2K">
             <objects>
-                <viewController id="d61-kU-vdY" customClass="MainView" customModule="AnimeFinder" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainView" id="d61-kU-vdY" customClass="MainView" customModule="AnimeFinder" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8g0-LH-uSr">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QHJ-tu-LFf">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QHJ-tu-LFf">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Scz-qh-agW">
+                                        <rect key="frame" x="58.5" y="117" width="297" height="178"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="297" id="baz-7Q-rnu"/>
+                                            <constraint firstAttribute="height" constant="178" id="pWY-aI-kad"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dnc-5C-ame">
+                                        <rect key="frame" x="92" y="54" width="243" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="AJ7-Zf-ipZ"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="dbT-KD-ucL"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="243" id="mS3-qR-xNq"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="243" id="nFU-99-c4W"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EGS-hb-15C">
+                                        <rect key="frame" x="58.5" y="366" width="297" height="134"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="134" id="tvR-ie-85k"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="297" id="zXW-bV-awK"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Pd-TZ-nyN">
+                                        <rect key="frame" x="163" y="348" width="88" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="hiF-6h-Rb4"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="88" id="ocP-r7-vTc"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Read More ?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cYQ-rc-FcA">
+                                        <rect key="frame" x="159" y="526" width="96" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="96" id="CmX-kS-LIK"/>
+                                            <constraint firstAttribute="height" constant="21" id="J0g-qj-Xrq"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Episode: " textAlignment="center" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7m0-qD-BI6">
+                                        <rect key="frame" x="92" y="83" width="243" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="243" id="F48-dt-RRc"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="243" id="MwT-42-SGX"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="hUP-oi-rkl"/>
+                                            <constraint firstAttribute="height" constant="21" id="tMg-2N-2C4"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="cYQ-rc-FcA" firstAttribute="top" secondItem="EGS-hb-15C" secondAttribute="bottom" constant="26" id="0un-4J-LrS"/>
+                                    <constraint firstAttribute="height" constant="842" id="3qA-PF-wZR"/>
+                                    <constraint firstItem="Dnc-5C-ame" firstAttribute="leading" secondItem="7m0-qD-BI6" secondAttribute="leading" id="BDN-b0-dos"/>
+                                    <constraint firstItem="6Pd-TZ-nyN" firstAttribute="top" secondItem="Scz-qh-agW" secondAttribute="bottom" constant="53" id="BUp-dH-iNT"/>
+                                    <constraint firstItem="C4Y-YN-sv7" firstAttribute="trailing" secondItem="EGS-hb-15C" secondAttribute="trailing" constant="58" id="CyO-g5-Xau"/>
+                                    <constraint firstAttribute="bottom" secondItem="Scz-qh-agW" secondAttribute="bottom" constant="547" id="DSF-0b-5vA"/>
+                                    <constraint firstItem="7m0-qD-BI6" firstAttribute="leading" secondItem="C4Y-YN-sv7" secondAttribute="leading" constant="92" id="ENr-6p-QSR"/>
+                                    <constraint firstItem="Scz-qh-agW" firstAttribute="top" secondItem="7m0-qD-BI6" secondAttribute="bottom" constant="13" id="Em4-h3-0TU"/>
+                                    <constraint firstItem="Scz-qh-agW" firstAttribute="top" secondItem="QHJ-tu-LFf" secondAttribute="top" constant="117" id="JHd-z0-xu9"/>
+                                    <constraint firstItem="7m0-qD-BI6" firstAttribute="top" secondItem="Dnc-5C-ame" secondAttribute="bottom" constant="8" id="JIe-Lo-nZR"/>
+                                    <constraint firstItem="7m0-qD-BI6" firstAttribute="top" secondItem="Dnc-5C-ame" secondAttribute="bottom" constant="8" id="Nj0-gQ-5aZ"/>
+                                    <constraint firstItem="EGS-hb-15C" firstAttribute="top" secondItem="Scz-qh-agW" secondAttribute="bottom" constant="71" id="PGv-GV-n29"/>
+                                    <constraint firstItem="Scz-qh-agW" firstAttribute="centerX" secondItem="cYQ-rc-FcA" secondAttribute="centerX" id="T30-FV-TfO"/>
+                                    <constraint firstItem="Scz-qh-agW" firstAttribute="centerX" secondItem="6Pd-TZ-nyN" secondAttribute="centerX" id="V6w-i1-aX9"/>
+                                    <constraint firstItem="Dnc-5C-ame" firstAttribute="top" secondItem="C4Y-YN-sv7" secondAttribute="top" constant="54" id="WUi-J0-xRb"/>
+                                    <constraint firstItem="Scz-qh-agW" firstAttribute="top" secondItem="7m0-qD-BI6" secondAttribute="bottom" constant="13" id="aPk-NG-RyU"/>
+                                    <constraint firstItem="C4Y-YN-sv7" firstAttribute="trailing" secondItem="7m0-qD-BI6" secondAttribute="trailing" constant="78.5" id="amq-Fy-HcH"/>
+                                    <constraint firstItem="Scz-qh-agW" firstAttribute="top" secondItem="7m0-qD-BI6" secondAttribute="bottom" constant="13" id="fRm-oc-j7a"/>
+                                    <constraint firstItem="7m0-qD-BI6" firstAttribute="top" secondItem="Dnc-5C-ame" secondAttribute="bottom" constant="8" id="fq9-WF-JC6"/>
+                                    <constraint firstItem="cYQ-rc-FcA" firstAttribute="top" secondItem="6Pd-TZ-nyN" secondAttribute="bottom" constant="157" id="jhy-wo-Glh"/>
+                                    <constraint firstItem="C4Y-YN-sv7" firstAttribute="trailing" secondItem="Dnc-5C-ame" secondAttribute="trailing" constant="78.5" id="nVe-BI-lgl"/>
+                                    <constraint firstItem="Scz-qh-agW" firstAttribute="centerX" secondItem="QHJ-tu-LFf" secondAttribute="centerX" id="oeB-QT-svI"/>
+                                    <constraint firstItem="Dnc-5C-ame" firstAttribute="leading" secondItem="5i7-hj-GZJ" secondAttribute="leading" constant="92" id="q5i-ig-RRU"/>
+                                    <constraint firstItem="7m0-qD-BI6" firstAttribute="top" secondItem="Dnc-5C-ame" secondAttribute="bottom" constant="8" id="r9c-os-bCO"/>
+                                    <constraint firstItem="Scz-qh-agW" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="EGS-hb-15C" secondAttribute="leading" id="rDe-aU-lDd"/>
+                                    <constraint firstItem="Dnc-5C-ame" firstAttribute="leading" secondItem="C4Y-YN-sv7" secondAttribute="leading" constant="92" id="sp0-jn-16H"/>
+                                    <constraint firstItem="6Pd-TZ-nyN" firstAttribute="top" secondItem="Scz-qh-agW" secondAttribute="bottom" constant="53" id="vl8-qQ-UYa"/>
+                                    <constraint firstAttribute="trailing" secondItem="Scz-qh-agW" secondAttribute="trailing" constant="58" id="wIW-fk-Kpn"/>
+                                    <constraint firstAttribute="width" constant="414" id="wl4-IS-tdI"/>
+                                    <constraint firstItem="cYQ-rc-FcA" firstAttribute="top" secondItem="EGS-hb-15C" secondAttribute="bottom" constant="26" id="yIw-wi-aA8"/>
+                                </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="C4Y-YN-sv7"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="5i7-hj-GZJ"/>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="QHJ-tu-LFf" firstAttribute="top" secondItem="8g0-LH-uSr" secondAttribute="top" id="5fd-2I-cxq"/>
+                            <constraint firstItem="QHJ-tu-LFf" firstAttribute="trailing" secondItem="tcO-ja-Yfe" secondAttribute="trailing" id="DZ9-zb-nCJ"/>
+                            <constraint firstItem="QHJ-tu-LFf" firstAttribute="leading" secondItem="tcO-ja-Yfe" secondAttribute="leading" id="gfP-SD-T0y"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="tcO-ja-Yfe"/>
                     </view>
+                    <connections>
+                        <outlet property="AnimeNameLabel" destination="Dnc-5C-ame" id="68R-Iv-5IR"/>
+                        <outlet property="DescriptionBox" destination="EGS-hb-15C" id="i4R-Wg-9qe"/>
+                        <outlet property="EpisodeLabel" destination="7m0-qD-BI6" id="p1X-8T-bDf"/>
+                        <outlet property="ImageView" destination="Scz-qh-agW" id="vPY-Wh-VId"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dWb-Wo-eh9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -79,7 +179,7 @@
                 <avPlayerViewController videoGravity="AVLayerVideoGravityResizeAspect" id="5ze-cX-Nud" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2L3-ih-sns" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2407" y="1075"/>
+            <point key="canvasLocation" x="-1497" y="1081"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="iZV-hp-BcE">
