--- a/AnimeFinder/View/Cells/PhotoCell.xib
+++ b/AnimeFinder/View/Cells/PhotoCell.xib
@@ -10,16 +10,19 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="152" id="KGk-i7-Jjw" customClass="PhotoCell" customModule="AnimeFinder" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="423" height="152"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="423" height="152"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Testing2" translatesAutoresizingMaskIntoConstraints="NO" id="nid-tQ-Y73">
-                        <rect key="frame" x="0.0" y="0.0" width="423" height="152"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nid-tQ-Y73">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="medium"/>
+                        <accessibility key="accessibilityConfiguration">
+                            <accessibilityTraits key="traits" image="YES" adjustable="YES"/>
+                        </accessibility>
+                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small"/>
                     </imageView>
                 </subviews>
             </tableViewCellContentView>
@@ -30,7 +33,4 @@
             <point key="canvasLocation" x="212.31884057971016" y="188.83928571428569"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="Testing2" width="3360" height="2100"/>
-    </resources>
 </document>
